<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_16sdp"
                android:fitsSystemWindows="true"
                android:src="@drawable/chevron_left"
                android:translationZ="@dimen/_16sdp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatImageView>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgMovie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY"
                android:src="@drawable/default_image"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.8"
                app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatImageView>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:visibility="gone"
                app:layout_collapseMode="pin">

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_minus20sdp"
        android:background="@drawable/top_rounded_layout"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/top_rounded_layout"
            android:elevation="@dimen/_16sdp"
            android:padding="@dimen/_16sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleMovie"
                style="@style/MovieTitleBoldText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:text="@string/joker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgHeart"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:src="@mipmap/heart_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatImageView>

            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:isIndicator="true"
                android:minHeight="@dimen/_15sdp"
                android:numStars="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleMovie" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtRatingText"
                style="@style/MovieDescText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:maxLines="1"
                android:text="3.5"
                app:layout_constraintStart_toEndOf="@id/ratingBar"
                app:layout_constraintTop_toBottomOf="@id/titleMovie"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clMovieInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ratingBar">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtLanguageTitle"
                    style="@style/MovieDescText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:maxLines="1"
                    android:text="@string/language"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtLanguageValue"
                    style="@style/MovieDescText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:maxLines="1"
                    android:text="Enlgish"

                    app:layout_constraintStart_toEndOf="@id/txtLanguageTitle"
                    app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtReleaseValue"
                    style="@style/MovieDescText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:maxLines="1"
                    android:text="1 June"

                    app:layout_constraintStart_toEndOf="@id/txtReleaseTitle"
                    app:layout_constraintTop_toBottomOf="@id/txtLanguageTitle"></androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtReleaseTitle"
                    style="@style/MovieDescText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:maxLines="1"
                    android:text="@string/release_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtLanguageTitle"></androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtReleaseStatusValue"
                    style="@style/MovieDescText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:maxLines="1"
                    android:text="Released"
                    android:textColor="@color/lighBlue"

                    app:layout_constraintStart_toEndOf="@id/txtReleaseStatusTitle"
                    app:layout_constraintTop_toBottomOf="@id/txtReleaseTitle"></androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtReleaseStatusTitle"
                    style="@style/MovieDescText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:maxLines="1"
                    android:text="@string/release_status"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtReleaseTitle"></androidx.appcompat.widget.AppCompatTextView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtMovieName"
                style="@style/MovieTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:maxLines="1"
                android:text="@string/synopsis"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clMovieInfo"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtMovieDescription"
                style="@style/MovieDescText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/some_of_the_desc_here"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtMovieName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtMovieProductionHouse"
                style="@style/MovieTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:maxLines="1"
                android:text="@string/production_house"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtMovieDescription"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerProductionHouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/txtMovieProductionHouse"></androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/linear_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@id/recyclerProductionHouse">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/blue_button_background_layout"
                    android:text="@string/cast"
                    android:textColor="@color/white">

                </androidx.appcompat.widget.AppCompatButton>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnReview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/blue_button_background_layout"
                    android:text="@string/review"
                    android:textColor="@color/white"></androidx.appcompat.widget.AppCompatButton>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtSimilarMovies"
                style="@style/MovieTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:maxLines="1"
                android:text="@string/similar_movies"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_buttons"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerSimilarMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/txtSimilarMovies"></androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>



